# dp-python-lib

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/dp_python_lib/client/: __init__.py  annotation_client.py  ingestion_client.py  machine_config_client.py  mldp_client.py  pv_metadata_client.py  service_api_client_base.py
src/dp_python_lib/grpc/: annotation_pb2.py  annotation_pb2_grpc.py  common_pb2.py  common_pb2_grpc.py  ingestion_pb2.py  ingestion_pb2_grpc.py  ingestion_stream_pb2.py  ingestion_stream_pb2_grpc.py  query_pb2.py  query_pb2_grpc.py
tests/integration/: test_machine_config_client_integration.py  test_pv_metadata_client_integration.py
tests/unit/: test_ingestion_client.py  test_machine_config_activation_client.py  test_machine_config_client.py  test_pv_metadata_client.py
